Aligned text to correct level with checkbox
Added extra layer controls

--- a/covid-impact-visualizer/src/Sidebar.css
+++ b/covid-impact-visualizer/src/Sidebar.css
@@ -88,12 +88,11 @@
   
   .population_text {
     font-size: small;
-    margin-top: 10px;
+    margin-top: 2px;
     float:right;
       margin-left:10px;
       position: relative;
       padding: 1px;
     right: 160px;
-    padding-left: 1px;
     bottom: 40px;
   }
